pandaQParser.py
# Generated from pandaQ.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class pandaQParser ( Parser ):

    grammarFileName = "pandaQ.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'*'", "','", "';'", "'('", "')'", "'/'", 
                     "'+'", "'-'", "'='", "'<>'", "'<'", "'<='", "'>'", 
                     "'>='", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "':='" ]

    symbolicNames = [ "<INVALID>", "SELECT", "FROM", "AS", "ORDER", "BY", 
                      "ASC", "DESC", "WHERE", "OR", "AND", "NOT", "INNER", 
                      "JOIN", "ON", "PLOT", "IN", "STAR", "COMMA", "SEMICOLON", 
                      "LPAREN", "RPAREN", "DIV", "PLUS", "MINUS", "EQUAL", 
                      "NOT_EQUAL", "LESS", "LESS_OR_EQUAL", "GREATER", "GREATER_OR_EQUAL", 
                      "ID", "NUMBER", "STRING", "TRUE", "FALSE", "ASSIG", 
                      "WS" ]

    RULE_instruction = 0
    RULE_plot = 1
    RULE_assignment = 2
    RULE_query = 3
    RULE_statement = 4
    RULE_all = 5
    RULE_selection = 6
    RULE_selectItem = 7
    RULE_expression = 8
    RULE_columnName = 9
    RULE_tableSource = 10
    RULE_tableName = 11
    RULE_orderByExpressionList = 12
    RULE_orderByExpression = 13
    RULE_condition = 14
    RULE_booleanExpression = 15
    RULE_booleanTerm = 16
    RULE_booleanFactor = 17
    RULE_booleanPrimary = 18
    RULE_comparisonExpression = 19

    ruleNames =  [ "instruction", "plot", "assignment", "query", "statement", 
                   "all", "selection", "selectItem", "expression", "columnName", 
                   "tableSource", "tableName", "orderByExpressionList", 
                   "orderByExpression", "condition", "booleanExpression", 
                   "booleanTerm", "booleanFactor", "booleanPrimary", "comparisonExpression" ]

    EOF = Token.EOF
    SELECT=1
    FROM=2
    AS=3
    ORDER=4
    BY=5
    ASC=6
    DESC=7
    WHERE=8
    OR=9
    AND=10
    NOT=11
    INNER=12
    JOIN=13
    ON=14
    PLOT=15
    IN=16
    STAR=17
    COMMA=18
    SEMICOLON=19
    LPAREN=20
    RPAREN=21
    DIV=22
    PLUS=23
    MINUS=24
    EQUAL=25
    NOT_EQUAL=26
    LESS=27
    LESS_OR_EQUAL=28
    GREATER=29
    GREATER_OR_EQUAL=30
    ID=31
    NUMBER=32
    STRING=33
    TRUE=34
    FALSE=35
    ASSIG=36
    WS=37

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class InstructionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMICOLON(self):
            return self.getToken(pandaQParser.SEMICOLON, 0)

        def plot(self):
            return self.getTypedRuleContext(pandaQParser.PlotContext,0)


        def assignment(self):
            return self.getTypedRuleContext(pandaQParser.AssignmentContext,0)


        def query(self):
            return self.getTypedRuleContext(pandaQParser.QueryContext,0)


        def getRuleIndex(self):
            return pandaQParser.RULE_instruction

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstruction" ):
                return visitor.visitInstruction(self)
            else:
                return visitor.visitChildren(self)




    def instruction(self):

        localctx = pandaQParser.InstructionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_instruction)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [15]:
                self.state = 40
                self.plot()
                pass
            elif token in [31]:
                self.state = 41
                self.assignment()
                pass
            elif token in [1]:
                self.state = 42
                self.query()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 45
            self.match(pandaQParser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PlotContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PLOT(self):
            return self.getToken(pandaQParser.PLOT, 0)

        def tableName(self):
            return self.getTypedRuleContext(pandaQParser.TableNameContext,0)


        def getRuleIndex(self):
            return pandaQParser.RULE_plot

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPlot" ):
                return visitor.visitPlot(self)
            else:
                return visitor.visitChildren(self)




    def plot(self):

        localctx = pandaQParser.PlotContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_plot)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self.match(pandaQParser.PLOT)
            self.state = 48
            self.tableName()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(pandaQParser.ID, 0)

        def ASSIG(self):
            return self.getToken(pandaQParser.ASSIG, 0)

        def query(self):
            return self.getTypedRuleContext(pandaQParser.QueryContext,0)


        def getRuleIndex(self):
            return pandaQParser.RULE_assignment

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = pandaQParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.match(pandaQParser.ID)
            self.state = 51
            self.match(pandaQParser.ASSIG)
            self.state = 52
            self.query()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QueryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self):
            return self.getTypedRuleContext(pandaQParser.StatementContext,0)


        def ORDER(self):
            return self.getToken(pandaQParser.ORDER, 0)

        def BY(self):
            return self.getToken(pandaQParser.BY, 0)

        def orderByExpressionList(self):
            return self.getTypedRuleContext(pandaQParser.OrderByExpressionListContext,0)


        def getRuleIndex(self):
            return pandaQParser.RULE_query

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQuery" ):
                return visitor.visitQuery(self)
            else:
                return visitor.visitChildren(self)




    def query(self):

        localctx = pandaQParser.QueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_query)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.statement()
            self.state = 58
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==4:
                self.state = 55
                self.match(pandaQParser.ORDER)
                self.state = 56
                self.match(pandaQParser.BY)
                self.state = 57
                self.orderByExpressionList()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SELECT(self):
            return self.getToken(pandaQParser.SELECT, 0)

        def FROM(self):
            return self.getToken(pandaQParser.FROM, 0)

        def tableSource(self):
            return self.getTypedRuleContext(pandaQParser.TableSourceContext,0)


        def all_(self):
            return self.getTypedRuleContext(pandaQParser.AllContext,0)


        def selection(self):
            return self.getTypedRuleContext(pandaQParser.SelectionContext,0)


        def WHERE(self):
            return self.getToken(pandaQParser.WHERE, 0)

        def condition(self):
            return self.getTypedRuleContext(pandaQParser.ConditionContext,0)


        def getRuleIndex(self):
            return pandaQParser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = pandaQParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.match(pandaQParser.SELECT)
            self.state = 63
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [17]:
                self.state = 61
                self.all_()
                pass
            elif token in [31, 32]:
                self.state = 62
                self.selection()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 65
            self.match(pandaQParser.FROM)
            self.state = 66
            self.tableSource()
            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 67
                self.match(pandaQParser.WHERE)
                self.state = 68
                self.condition()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AllContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STAR(self):
            return self.getToken(pandaQParser.STAR, 0)

        def getRuleIndex(self):
            return pandaQParser.RULE_all

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAll" ):
                return visitor.visitAll(self)
            else:
                return visitor.visitChildren(self)




    def all_(self):

        localctx = pandaQParser.AllContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_all)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(pandaQParser.STAR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SelectionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def selectItem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pandaQParser.SelectItemContext)
            else:
                return self.getTypedRuleContext(pandaQParser.SelectItemContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(pandaQParser.COMMA)
            else:
                return self.getToken(pandaQParser.COMMA, i)

        def getRuleIndex(self):
            return pandaQParser.RULE_selection

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSelection" ):
                return visitor.visitSelection(self)
            else:
                return visitor.visitChildren(self)




    def selection(self):

        localctx = pandaQParser.SelectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_selection)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.selectItem()
            self.state = 78
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==18:
                self.state = 74
                self.match(pandaQParser.COMMA)
                self.state = 75
                self.selectItem()
                self.state = 80
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SelectItemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return pandaQParser.RULE_selectItem

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class SelectItemColumnNameContext(SelectItemContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pandaQParser.SelectItemContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def columnName(self):
            return self.getTypedRuleContext(pandaQParser.ColumnNameContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSelectItemColumnName" ):
                return visitor.visitSelectItemColumnName(self)
            else:
                return visitor.visitChildren(self)


    class SelectItemASContext(SelectItemContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pandaQParser.SelectItemContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(pandaQParser.ExpressionContext,0)

        def AS(self):
            return self.getToken(pandaQParser.AS, 0)
        def columnName(self):
            return self.getTypedRuleContext(pandaQParser.ColumnNameContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSelectItemAS" ):
                return visitor.visitSelectItemAS(self)
            else:
                return visitor.visitChildren(self)



    def selectItem(self):

        localctx = pandaQParser.SelectItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_selectItem)
        try:
            self.state = 86
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                localctx = pandaQParser.SelectItemColumnNameContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 81
                self.columnName()
                pass

            elif la_ == 2:
                localctx = pandaQParser.SelectItemASContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 82
                self.expression(0)
                self.state = 83
                self.match(pandaQParser.AS)
                self.state = 84
                self.columnName()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return pandaQParser.RULE_expression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class ExpressionNumberContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pandaQParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NUMBER(self):
            return self.getToken(pandaQParser.NUMBER, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressionNumber" ):
                return visitor.visitExpressionNumber(self)
            else:
                return visitor.visitChildren(self)


    class ExpressionAritmeticContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pandaQParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pandaQParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(pandaQParser.ExpressionContext,i)

        def STAR(self):
            return self.getToken(pandaQParser.STAR, 0)
        def DIV(self):
            return self.getToken(pandaQParser.DIV, 0)
        def PLUS(self):
            return self.getToken(pandaQParser.PLUS, 0)
        def MINUS(self):
            return self.getToken(pandaQParser.MINUS, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressionAritmetic" ):
                return visitor.visitExpressionAritmetic(self)
            else:
                return visitor.visitChildren(self)


    class ExpressionColumnNameContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pandaQParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def columnName(self):
            return self.getTypedRuleContext(pandaQParser.ColumnNameContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpressionColumnName" ):
                return visitor.visitExpressionColumnName(self)
            else:
                return visitor.visitChildren(self)



    def expression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = pandaQParser.ExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 16
        self.enterRecursionRule(localctx, 16, self.RULE_expression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [32]:
                localctx = pandaQParser.ExpressionNumberContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 89
                self.match(pandaQParser.NUMBER)
                pass
            elif token in [31]:
                localctx = pandaQParser.ExpressionColumnNameContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 90
                self.columnName()
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 107
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 105
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
                    if la_ == 1:
                        localctx = pandaQParser.ExpressionAritmeticContext(self, pandaQParser.ExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 93
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 94
                        self.match(pandaQParser.STAR)
                        self.state = 95
                        self.expression(6)
                        pass

                    elif la_ == 2:
                        localctx = pandaQParser.ExpressionAritmeticContext(self, pandaQParser.ExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 96
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 97
                        self.match(pandaQParser.DIV)
                        self.state = 98
                        self.expression(5)
                        pass

                    elif la_ == 3:
                        localctx = pandaQParser.ExpressionAritmeticContext(self, pandaQParser.ExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 99
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 100
                        self.match(pandaQParser.PLUS)
                        self.state = 101
                        self.expression(4)
                        pass

                    elif la_ == 4:
                        localctx = pandaQParser.ExpressionAritmeticContext(self, pandaQParser.ExpressionContext(self, _parentctx, _parentState))
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expression)
                        self.state = 102
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 103
                        self.match(pandaQParser.MINUS)
                        self.state = 104
                        self.expression(3)
                        pass

             
                self.state = 109
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class ColumnNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(pandaQParser.ID, 0)

        def getRuleIndex(self):
            return pandaQParser.RULE_columnName

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitColumnName" ):
                return visitor.visitColumnName(self)
            else:
                return visitor.visitChildren(self)




    def columnName(self):

        localctx = pandaQParser.ColumnNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_columnName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(pandaQParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TableSourceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tableName(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pandaQParser.TableNameContext)
            else:
                return self.getTypedRuleContext(pandaQParser.TableNameContext,i)


        def INNER(self, i:int=None):
            if i is None:
                return self.getTokens(pandaQParser.INNER)
            else:
                return self.getToken(pandaQParser.INNER, i)

        def JOIN(self, i:int=None):
            if i is None:
                return self.getTokens(pandaQParser.JOIN)
            else:
                return self.getToken(pandaQParser.JOIN, i)

        def ON(self, i:int=None):
            if i is None:
                return self.getTokens(pandaQParser.ON)
            else:
                return self.getToken(pandaQParser.ON, i)

        def condition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pandaQParser.ConditionContext)
            else:
                return self.getTypedRuleContext(pandaQParser.ConditionContext,i)


        def getRuleIndex(self):
            return pandaQParser.RULE_tableSource

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTableSource" ):
                return visitor.visitTableSource(self)
            else:
                return visitor.visitChildren(self)




    def tableSource(self):

        localctx = pandaQParser.TableSourceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_tableSource)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.tableName()
            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==12:
                self.state = 113
                self.match(pandaQParser.INNER)
                self.state = 114
                self.match(pandaQParser.JOIN)
                self.state = 115
                self.tableName()
                self.state = 116
                self.match(pandaQParser.ON)
                self.state = 117
                self.condition()
                self.state = 123
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TableNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(pandaQParser.ID, 0)

        def getRuleIndex(self):
            return pandaQParser.RULE_tableName

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTableName" ):
                return visitor.visitTableName(self)
            else:
                return visitor.visitChildren(self)




    def tableName(self):

        localctx = pandaQParser.TableNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_tableName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(pandaQParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OrderByExpressionListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def orderByExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(pandaQParser.OrderByExpressionContext)
            else:
                return self.getTypedRuleContext(pandaQParser.OrderByExpressionContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(pandaQParser.COMMA)
            else:
                return self.getToken(pandaQParser.COMMA, i)

        def getRuleIndex(self):
            return pandaQParser.RULE_orderByExpressionList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOrderByExpressionList" ):
                return visitor.visitOrderByExpressionList(self)
            else:
                return visitor.visitChildren(self)




    def orderByExpressionList(self):

        localctx = pandaQParser.OrderByExpressionListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_orderByExpressionList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.orderByExpression()
            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==18:
                self.state = 127
                self.match(pandaQParser.COMMA)
                self.state = 128
                self.orderByExpression()
                self.state = 133
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OrderByExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def columnName(self):
            return self.getTypedRuleContext(pandaQParser.ColumnNameContext,0)


        def ASC(self):
            return self.getToken(pandaQParser.ASC, 0)

        def DESC(self):
            return self.getToken(pandaQParser.DESC, 0)

        def getRuleIndex(self):
            return pandaQParser.RULE_orderByExpression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOrderByExpression" ):
                return visitor.visitOrderByExpression(self)
            else:
                return visitor.visitChildren(self)




    def orderByExpression(self):

        localctx = pandaQParser.OrderByExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_orderByExpression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.columnName()
            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==6 or _la==7:
                self.state = 135
                _la = self._input.LA(1)
                if not(_la==6 or _la==7):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return pandaQParser.RULE_condition

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ConditionInContext(ConditionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a pandaQParser.ConditionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def columnName(self):
            return self.getTypedRuleContext(pandaQParser.ColumnNameContext,0)

        def IN(self):
            return self.getToken(pandaQParser.IN, 0)
        def LPAREN(self):
            return self.getToken(pandaQParser.LPAREN, 0)
        def query(self):
            return self.getTypedRuleContext(pandaQParser.QueryContext,0)

        def RPAREN(self):
            return self.getToken(pandaQParser.RPAREN, 0)
